Update 2-2. BMP 영상입출력.md

--- a/패턴인식 강의/2-2. BMP 영상입출력.md
+++ b/패턴인식 강의/2-2. BMP 영상입출력.md
@@ -12,7 +12,7 @@ void  main() {
 	RGBQUAD hRGB[256]; // 팔레트 (256*4 Bytes)
 	
 	FILE *fp;
-	fp = fopen("lena.bmp", "rb");
+	fp = fopen("lenna.bmp", "rb");
 	if (fp==NULL)
 	{
 		return;
